--- a/Views/Tickets/Edit.cshtml
+++ b/Views/Tickets/Edit.cshtml
@@ -49,9 +49,9 @@
                 <span asp-validation-for="TicketTypeId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TicketPriotiryId" class="control-label"></label>
-                <input asp-for="TicketPriotiryId" class="form-control" />
-                <span asp-validation-for="TicketPriotiryId" class="text-danger"></span>
+                <label asp-for="TicketPriorityId" class="control-label"></label>
+                <input asp-for="TicketPriorityId" class="form-control" />
+                <span asp-validation-for="TicketPriorityId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="TicketStatusId" class="control-label"></label>
