UserRoles view Model and controller

--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using TitanTracker.Extensions
 @inject SignInManager<BTUser> SignInManager
 @inject UserManager<BTUser> UserManager
 
@@ -10,7 +11,7 @@
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @bTUser.FirstName!</a>
         </li>
         <li class="nav-item">
-            <div>Company Id: @User.Identity>GetCompanyId().Value</div>
+            <div>Company Id: @User.Identity.GetCompanyId().Value</div>
         </li>
         <li class="nav-item">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
