--- a/Views/Home/Landing.cshtml
+++ b/Views/Home/Landing.cshtml
@@ -1,13 +1,15 @@
 ﻿@{
     Layout = null;
+
 }
+ 
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
-    <title>Lockscreen Cover | CORK - Multipurpose Bootstrap Dashboard Template </title>
+    <title>Titan Tracker | Landing Page </title>
     <link rel="icon" type="image/x-icon" href="~/assets/img/favicon.ico" />
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
@@ -30,15 +32,15 @@
                             <img src="~/assets/img/90x90.jpg" class="usr-profile" alt="avatar">
                             <div class="">
                                 @*Need to make this a potential welcome to the users*@
-                                <p class="">Titan Tracker</p>
+                                <h1 class="">Titan Tracker</h1>
                             </div>
                         </div>
 
                         <div class="field-wrapper">
-                            <a asp-page="/Account/Login" asp-area="Identity" class="btn btn-primary" value="">TRY NOW</a>
+                            <a asp-page="/Account/Login" asp-area="Identity" class="btn btn-warning btn-rounded align-content-center" value="">TRY NOW</a>
                         </div>
 
-                        <p class="terms-conditions">© 2020 All Rights Reserved. <a href="index.html">CORK</a> is a product of Designreset. <a href="javascript:void(0);">Cookie Preferences</a>, <a href="javascript:void(0);">Privacy</a>, and <a href="javascript:void(0);">Terms</a>.</p>
+                        <p class="terms-conditions">© 2020 All Rights Reserved. @*<a href="index.html">CORK</a> is a product of Designreset.*@ <a href="javascript:void(0);">Cookie Preferences</a>, <a href="javascript:void(0);">Privacy</a>, and <a href="javascript:void(0);">Terms</a>.</p>
                     </div>
                 </div>
             </div>
