--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -439,7 +439,7 @@
                         <a href="#elements" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                             <div class="">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-zap"><polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"></polygon></svg>
-                                <span>Elements</span>
+                                <span>Admin</span>
                             </div>
                             <div>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg>
@@ -447,9 +447,9 @@
                         </a>
                         <ul class="collapse submenu list-unstyled" id="elements" data-parent="#accordionExample">
                             <li>
-                                <a href="element_alerts.html"> Alerts </a>
+                                <a asp-action="Create" asp-controller="Invites"> Send an Invite </a>
                             </li>
-                            <li>
+                            @*<li>
                                 <a href="element_avatar.html"> Avatar </a>
                             </li>
                             <li>
@@ -499,7 +499,7 @@
                             </li>
                             <li>
                                 <a href="element_typography.html"> Typography </a>
-                            </li>
+                            </li>*@
                         </ul>
                     </li>
 
