fixed lohin view

--- a/Views/Home/Dashboard.cshtml
+++ b/Views/Home/Dashboard.cshtml
@@ -490,36 +490,36 @@
                 <div class="widget-heading">
                     <div class="wallet-usr-info">
                         <div class="usr-name">
-                            <span><img src="~/assets/img/90x90.jpg" alt="admin-profile" class="img-fluid"> Alan Green</span>
+                            <span><img src="~/assets/img/90x90.jpg" alt="admin-profile" class="img-fluid">@User.Identity.Name</span>
                         </div>
                         <div class="add">
                             <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg></span>
                         </div>
                     </div>
                     <div class="wallet-balance">
-                        <p>Wallet Balance</p>
-                        <h5 class=""><span class="w-currency">$</span>2953</h5>
+                        <p></p>
+                        <h5 class=""><span class="w-currency"></span></h5>
                     </div>
                 </div>
 
                 <div class="widget-amount">
 
                     <div class="w-a-info funds-received">
-                        <span>Received <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-up"><polyline points="18 15 12 9 6 15"></polyline></svg></span>
-                        <p>$97.99</p>
+                        <span>Projects <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-up"><polyline points="18 15 12 9 6 15"></polyline></svg></span>
+                        <p><button class="btn btn-dark">View My Projects</button></p>
                     </div>
 
                     <div class="w-a-info funds-spent">
-                        <span>Spent <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-down"><polyline points="6 9 12 15 18 9"></polyline></svg></span>
-                        <p>$53.00</p>
+                        <span>Company <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-down"><polyline points="6 9 12 15 18 9"></polyline></svg></span>
+                        <p><button class="btn btn-dark">View My Tickets</button></p>
                     </div>
                 </div>
 
                 <div class="widget-content">
-
-                    <div class="bills-stats">
+                    
+                    @*<div class="bills-stats">
                         <span>Pending</span>
-                    </div>
+                    </div>*@
 
                     <div class="invoice-list">
 
