--- a/Views/Tickets/Details.cshtml
+++ b/Views/Tickets/Details.cshtml
@@ -159,20 +159,20 @@
 
                     <div class="mt-container mx-auto">
                         <div class="timeline-line">
-                            @foreach (TicketHistory history in Model.History)
-                            {
-                                <div class="item-timeline timeline-new">
-                                    <div class="t-dot ">
-                                        <div class="t-secondary"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg></div>
-                                    </div>
-                                    <div class="t-content ">
-                                        <div class="t-uppercontent">
-                                            <h6>@history.Property Updated <a href="javscript:void(0);"><span>@history.User.FullName</span></a></h6>
+                            @*@foreach (TicketHistocry history in Model.History)
+                                {
+                                    <div class="item-timeline timeline-new">
+                                        <div class="t-dot ">
+                                            <div class="t-secondary"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg></div>
                                         </div>
-                                        <p>@history.Created.ToString("MMM-dd-yyyy")</p>
+                                        <div class="t-content ">
+                                            <div class="t-uppercontent">
+                                                <h6>@history.Property Updated <a href="javscript:void(0);"><span>@history.User.FullName</span></a></h6>
+                                            </div>
+                                            <p>@history.Created.ToString("MMM-dd-yyyy")</p>
+                                        </div>
                                     </div>
-                                </div>
-                            }
+                                }*@
                         </div>
                     </div>
 
