--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -3,36 +3,58 @@
 
 @{
     Layout = "/Views/Shared/_LoginLayout.cshtml";
-    ViewData["Title"] = "Log in";
 
 }
+
+
+@*<---------------------------------START OF THE WORKING LOGIN FORM WITH MESSED UP CSS--------------------------------->*@
+<h1 class="">Sign In</h1>
+<p class="">Log in to your account to continue.</p>
+
 
 <form class="text-left" id="account" method="post">
     <div class="form">
 
         <div id="username-field" class="field-wrapper input">
-            <label>Email</label>
+            <label asp-for="Input.Email"></label>
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input type="email" asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
+            <input type="email" asp-for="Input.Email" class="form-control" placeholder="e.g John_Doe">
         </div>
-        @*need to fix forgot password*@
+
+        @*<div id="username-field" class="field-wrapper input">
+                <label>EMAIL</label>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
+                <div class="form-group">
+                    <label asp-for="Input.Email"></label>
+                    <input id="username" type="email" asp-for="Input.Email" class="form-control" placeholder="e.g John_Doe@gmail.com" />
+                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+                </div>
+            </div>*@
+
         <div id="password-field" class="field-wrapper input mb-2">
             <div class="d-flex justify-content-between">
                 <label for="password">PASSWORD</label>
-                <a href="auth_pass_recovery_boxed.html" class="forgot-pass-link">Forgot Password?</a>
+                <a href="" class="forgot-pass-link">Forgot Password?</a>
             </div>
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-lock"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect><path d="M7 11V7a5 5 0 0 1 10 0v4"></path></svg>
-            <div class="form-group">
-                <label asp-for="Input.Password"></label>
-                <input type="password" asp-for="Input.Password" class="form-control" />
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
+            <input type="password" asp-for="Input.Password" class="form-control" placeholder="Password">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" id="toggle-password" class="feather feather-eye"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg>
         </div>
+
+        @*<div id="password-field" class="field-wrapper input mb-2">
+                <div class="d-flex justify-content-between">
+                    <label for="password">PASSWORD</label>
+                    <a href="auth_pass_recovery_boxed.html" class="forgot-pass-link">Forgot Password?</a>
+                </div>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-lock"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect><path d="M7 11V7a5 5 0 0 1 10 0v4"></path></svg>
+                <div class="form-group">
+                    <label asp-for="Input.Password"></label>
+                    <input id="password" type="password" asp-for="Input.Password" class="form-control" />
+                    <span asp-validation-for="Input.Password" class="text-danger"></span>
+                </div>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" id="toggle-password" class="feather feather-eye"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg>
+            </div>*@
+
         <div class="d-sm-flex justify-content-between">
             <div class="field-wrapper">
                 <button type="submit" class="btn btn-primary">Log In</button>
@@ -42,28 +64,29 @@
         <div class="division">
             <span>OR</span>
         </div>
-
-        <div class="col-md-6 col-md-offset-2">
-            <section>
-                <hr />
-                <form class="" id="account" method="post">
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col-12 btn-block">
-                                <button type="submit" style="width:inherit;height:min-content" class="btn ripple btn-outline-primary p-10 m-2" name="demoEmail" value="DemoAdminEmail">Demo Admin</button>
-                                <button type="submit" style="width:inherit;height:min-content" class="btn ripple btn-outline-primary p-10 m-2" name="demoEmail" value="DemoPMEmail">Demo PM</button>
-                                <button type="submit" style="width:inherit;height:min-content" class="btn ripple btn-outline-primary p-10 m-2" name="demoEmail" value="DemoDevEmail">Demo Developer</button>
-                                <button type="submit" style="width:inherit;height:min-content" class="btn ripple btn-outline-primary p-10 m-2" name="demoEmail" value="DemoSubEmail">Demo Submitter</button>
-                            </div>
-                        </div>
-                    </div>
-                </form>
-            </section>
-        </div>
-
-        <p>Not registered ?  <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Create an account</a></p>
     </div>
 </form>
+
+
+<div class="col-md-12">
+    <section>
+        <form class="" id="account" method="post">
+            <div class="row">
+                <div class="col-12 btn-block">
+                    <button type="submit" style="width:inherit;height:min-content" class="btn ripple btn-outline-primary p-10 m-2" name="demoEmail" value="DemoAdminEmail">Demo Admin</button>
+                    <button type="submit" style="width:inherit;height:min-content" class="btn ripple btn-outline-primary p-10 m-2" name="demoEmail" value="DemoPMEmail">Demo PM</button>
+                    <button type="submit" style="width:inherit;height:min-content" class="btn ripple btn-outline-primary p-10 m-2" name="demoEmail" value="DemoDevEmail">Demo Developer</button>
+                    <button type="submit" style="width:inherit;height:min-content" class="btn ripple btn-outline-primary p-10 m-2" name="demoEmail" value="DemoSubEmail">Demo Submitter</button>
+                </div>
+            </div>
+        </form>
+    </section>
+</div>
+
+<p>Not registered ?  <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Create an account</a></p>
+
+@*<---------------------------------START OF THE FIRST LOGIN FORM WITH NO CSS--------------------------------->*@
+
 
 @*<h1>@ViewData["Title"]</h1>
     <div class="row">
