notification service functioning properly working on ticket/ Project history

--- a/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -10,7 +10,7 @@
     <div class="info-icon">
         <svg> ... </svg>
     </div>
-    <h1 class="info-heading">@ViewData.[Title]</h1>
+    <h1> EMAIL CONFIRMED</h1>
     <p class="info-text">@Model.StatusMessage</p>
-    <a class="info-link" asp-area="Identity" asp-page="/Account/Login">SIGN IN <svg> ... </svg></a>
+    <a class="info-link" asp-area="Identity" asp-page="/Account/Login"><button class="btn btn-dark ">SIGN IN</button> <svg> ... </svg></a>
 </div>
