--- a/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -2,25 +2,60 @@
 @model ForgotPasswordModel
 @{
     ViewData["Title"] = "Forgot your password?";
+    Layout = "/Views/Shared/_LoginLayout.cshtml";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h4>Enter your email.</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
+<link rel="stylesheet" type="text/css" href="assets/css/forms/theme-checkbox-radio.css">
+<link rel="stylesheet" type="text/css" href="assets/css/forms/switches.css">
+
+<h1 class="">Password Recovery</h1>
+<p class="signup-link recovery">Enter your email and instructions will sent to you!</p>
+<form class="text-left" method="post">
+    <div class="form">
+
+        <div id="email-field" class="field-wrapper input" asp-validation-summary="All">
+            <div class="d-flex justify-content-between">
                 <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-at-sign"><circle cx="12" cy="12" r="4"></circle><path d="M16 8v5a3 3 0 0 0 6 0v-1a10 10 0 1 0-3.92 7.94"></path></svg>
+            <input asp-for="Input.Email" id="email" name="email" type="text" class="form-control" value="" placeholder="e.g john@gmail.com">
+            <span asp-validation-for="Input.Email"></span>
+        </div>
+
+        <div class="d-sm-flex justify-content-between">
+
+            <div class="field-wrapper">
+                <button type="submit" class="btn btn-primary">Reset</button>
+            </div>
+        </div>
+
     </div>
-</div>
+</form>
+
+<script src="assets/js/authentication/form-2.js"></script>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+
+
+@*<h4>Enter your email.</h4>
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <form method="post">
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Input.Email"></label>
+                    <input asp-for="Input.Email" class="form-control" />
+                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+    </div>
+
+    @section Scripts {
+        <partial name="_ValidationScriptsPartial" />*@
+
+
