--- a/Areas/Identity/Pages/Account/Login - Copy.cshtml
+++ b/Areas/Identity/Pages/Account/Login - Copy.cshtml
@@ -1,14 +1,14 @@
-﻿@page
+﻿<!--@page
 @model LoginModel
 
 @{
     Layout = "/Views/Shared/_LoginLayout.cshtml";
 
-}
+}-->
 
 
 @*<---------------------------------START OF THE WORKING LOGIN FORM WITH MESSED UP CSS--------------------------------->*@
-<h1 class="">Sign In</h1>
+<!--<h1 class="">Sign In</h1>
 <p class="">Log in to your account to continue.</p>
 
 
@@ -19,7 +19,7 @@
             <label asp-for="Input.Email"></label>
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
             <input  asp-validation-for="Input.Email" type="email" asp-for="Input.Email" class="form-control" placeholder="e.g John_Doe">
-        </div>
+        </div>-->
 
         @*<div id="username-field" class="field-wrapper input">
                 <label>EMAIL</label>
@@ -31,15 +31,15 @@
                 </div>
             </div>*@
 
-        <div id="password-field" class="field-wrapper input mb-2">
+        <!--<div id="password-field" class="field-wrapper input mb-2">
             <div class="d-flex justify-content-between">
                 <label for="password">PASSWORD</label>
-                <a asp-page="/Account/ForgotPassword" asp-area="Identity" class="forgot-pass-link">Forgot Password?</a>
+                <a href="" class="forgot-pass-link">Forgot Password?</a>
             </div>
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-lock"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect><path d="M7 11V7a5 5 0 0 1 10 0v4"></path></svg>
             <input type="password" asp-validation-for="Input.Password"  asp-for="Input.Password" class="form-control" placeholder="Password">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" id="toggle-password" class="feather feather-eye"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg>
-        </div>
+        </div>-->
 
         @*<div id="password-field" class="field-wrapper input mb-2">
                 <div class="d-flex justify-content-between">
@@ -55,7 +55,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" id="toggle-password" class="feather feather-eye"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg>
             </div>*@
 
-        <div class="d-sm-flex justify-content-between">
+        <!--<div class="d-sm-flex justify-content-between">
             <div class="field-wrapper">
                 <button type="submit" class="btn btn-primary">Log In</button>
             </div>
@@ -83,7 +83,7 @@
     </section>
 </div>
 
-<p>Not registered ?  <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Create an account</a></p>
+<p>Not registered ?  <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Create an account</a></p>-->
 
 @*<---------------------------------START OF THE FIRST LOGIN FORM WITH NO CSS--------------------------------->*@
 
@@ -163,6 +163,6 @@
         </div>
     </div>*@
 
-@section Scripts {
+<!--@section Scripts {
     <partial name="_ValidationScriptsPartial" />
-}
+}-->
