--- a/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/Areas/Identity/Pages/Account/Logout.cshtml
@@ -1,8 +1,23 @@
 ﻿@page
 @model LogoutModel
+@using TitanTracker.Services.Interfaces
+@using Microsoft.AspNetCore.Identity
+@using TitanTracker.Extensions
+
+@inject UserManager<BTUser> UserManager
 @{
     ViewData["Title"] = "Log out";
+    Layout = "/Views/Shared/_LoginLayout.cshtml";
 }
+
+@{
+    BTUser btUser = await UserManager.GetUserAsync(User);
+
+    //string MostRecentProject = await ProjectService.GetUserProjectsAsync();
+}
+
+<link rel="stylesheet" type="text/css" href="~/assets/css/forms/theme-checkbox-radio.css">
+<link rel="stylesheet" type="text/css" href="~/assets/css/forms/switches.css">
 
 <header>
     <h1>@ViewData["Title"]</h1>
@@ -15,7 +30,35 @@
         }
         else
         {
-            <p>You have successfully logged out of the application.</p>
+            <div class="d-flex user-meta">
+                <img src="~/assets/img/90x90.jpg" class="usr-profile" alt="avatar">
+                <div class="">
+                    <p class="">@btUser.FullName</p>
+                </div>
+            </div>
+
+            <form class="text-left" method="post">
+                <div class="form">
+                    <input hidden asp-for="Input.Email" />
+                    <input hidden asp-for="Input.RememberMe" />
+                    <div id="password-field" class="field-wrapper input mb-2">
+                        <div class="d-flex justify-content-between">
+                            <label for="password">PASSWORD</label>
+                            <a asp-page="/Account/ForgotPassword" asp-area="Identity" class="forgot-pass-link">Forgot Password?</a>
+                        </div>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-lock"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect><path d="M7 11V7a5 5 0 0 1 10 0v4"></path></svg>
+                        <input type="password" asp-validation-for="Input.Password" asp-for="Input.Password" id="password" name="password" type="password" class="form-control" placeholder="Password">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" id="toggle-password" class="feather feather-eye"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg>
+                    </div>
+                    <div class="d-sm-flex justify-content-between">
+                        <div class="field-wrapper">
+                            <button type="submit" class="btn btn-primary" value="">Unlock</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+
         }
     }
 </header>
+<script src="~/assets/js/authentication/form-2.js"></script>
