--- a/Views/Home/Landing.cshtml
+++ b/Views/Home/Landing.cshtml
@@ -37,7 +37,7 @@
                         </div>
 
                         <div class="field-wrapper">
-                            <a asp-page="/Account/Login" asp-area="Identity" class="btn btn-warning btn-rounded align-content-center" value="">TRY NOW</a>
+                            <a asp-page="/Account/Login" asp-area="Identity" class="btn btn-warning btn-rounded align-content-center" value="">TRY IT NOW</a>
                         </div>
 
                         <p class="terms-conditions">© 2020 All Rights Reserved. @*<a href="index.html">CORK</a> is a product of Designreset.*@ <a href="javascript:void(0);">Cookie Preferences</a>, <a href="javascript:void(0);">Privacy</a>, and <a href="javascript:void(0);">Terms</a>.</p>
