--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -5,73 +5,90 @@
     Layout = "/Views/Shared/_LoginLayout.cshtml";
 }
 
+<link rel="stylesheet" type="text/css" href="assets/css/forms/theme-checkbox-radio.css">
+<link rel="stylesheet" type="text/css" href="assets/css/forms/switches.css">
+
 <h1>@ViewData["Title"]</h1>
 
-<div class="row">
-    <div class="col-md-4">
-        <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h4>Create a new account.</h4>
-            <hr />
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.FirstName"></label>
-                <input asp-for="Input.FirstName" class="form-control" />
-                <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+<h1 class="">Register</h1>
+<p class="signup-link register">Already have an account? <a asp-page="/Account/Login" asp-area="Identity">Log in</a></p>
+<form class="text-left" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+    <div class="form" asp-validation-summary="All">
+
+        <div id="username-field" class="field-wrapper input">
+            <label for="FirstName">First Name</label>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
+            <input asp-for="Input.FirstName"  type="text" class="form-control" placeholder="e.g John">
+            <span asp-validation-for="Input.FirstName"></span>
+        </div>
+        <div id="username-field" class="field-wrapper input">
+            <label for="LastName">Last Name</label>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
+            <input asp-for="Input.LastName" type="text" class="form-control" placeholder="e.g Doe">
+            <span asp-validation-for="Input.LastName"></span>
+
+        </div>
+        <div id="username-field" class="field-wrapper input">
+            <label for="ComapnyName">Company Name</label>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
+            <input asp-for="Input.CompanyName" type="text" class="form-control" placeholder="e.g Susan's Cake Shop">
+            <span asp-validation-for="Input.CompanyName"></span>
+
+        </div>
+        <div id="username-field" class="field-wrapper input">
+            <label for="CompanyDescription">Company Description</label>
+            <textarea asp-for="Input.CompanyDescription" type="text" class="form-control" placeholder="Tell us a little about your company...."></textarea>
+            <span asp-validation-for="Input.CompanyDescription"></span>
+
+        </div>
+
+        <div id="email-field" class="field-wrapper input">
+            <label for="email">Email</label>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-at-sign register"><circle cx="12" cy="12" r="4"></circle><path d="M16 8v5a3 3 0 0 0 6 0v-1a10 10 0 1 0-3.92 7.94"></path></svg>
+            <input asp-for="Input.Email" type="text" value="" class="form-control" placeholder="e.g johnDoe@gmail.com">
+            <span asp-validation-for="Input.Email"></span>
+        </div>
+
+        <div id="password-field" class="field-wrapper input mb-2">
+            <div class="d-flex justify-content-between">
+                <label for="password">Password</label>
+
             </div>
-            <div class="form-group">
-                <label asp-for="Input.LastName"></label>
-                <input asp-for="Input.LastName" class="form-control" />
-                <span asp-validation-for="Input.LastName" class="text-danger"></span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-lock"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect><path d="M7 11V7a5 5 0 0 1 10 0v4"></path></svg>
+            <input asp-for="Input.Password" type="password" class="form-control" placeholder="Password">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" id="toggle-password" class="feather feather-eye"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg>
+            <span asp-validation-for="Input.Password"></span>
+        </div>
+        <div id="password-field" class="field-wrapper input mb-2">
+            <div class="d-flex justify-content-between">
+                <label for="ConfirmPassword"> Confirm Password</label>
+
             </div>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-lock"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect><path d="M7 11V7a5 5 0 0 1 10 0v4"></path></svg>
+            <input asp-for="Input.ConfirmPassword" type="password" class="form-control" placeholder="Password">
+            <span asp-validation-for="Input.ConfirmPassword"></span>
+        </div>
+
+        <div class="field-wrapper terms_condition">
+            <div class="n-chk">
+                <label class="new-control new-checkbox checkbox-primary">
+                    <input type="checkbox" class="new-control-input">
+                    <span class="new-control-indicator"></span><span>I agree to the <a href="javascript:void(0);">  terms and conditions </a></span>
+                </label>
             </div>
-            <div class="form-group">
-                <label asp-for="Input.Password"></label>
-                <input asp-for="Input.Password" class="form-control" />
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
+        </div>
+
+        <div class="d-sm-flex justify-content-between">
+            <div class="field-wrapper">
+                <button type="submit" class="btn btn-primary" value="">Get Started!</button>
             </div>
-            <div class="form-group">
-                <label asp-for="Input.ConfirmPassword"></label>
-                <input asp-for="Input.ConfirmPassword" class="form-control" />
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-primary">Register</button>
-        </form>
+        </div>
+
+
     </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h4>Use another service to register.</h4>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                            for details on setting up this ASP.NET application to support logging in via external services.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
-    </div>
-</div>
+</form>
+
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
