--- a/Views/Tickets/AllTickets.cshtml
+++ b/Views/Tickets/AllTickets.cshtml
@@ -18,32 +18,21 @@
                 <th>
                     @Html.DisplayNameFor(model => model.Description)
                 </th>
+              
                 <th>
-                    @Html.DisplayNameFor(model => model.Created)
+                   Type
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Updated)
+                   Status
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Archived)
+                   Priority
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Project)
+                  Submitter
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.TicketType)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.TicketStatus)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.TicketPriority)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.OwnerUser)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.DeveloperUser)
+                   Developer
                 </th>
                 <th></th>
             </tr>
@@ -58,32 +47,22 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.Description)
                     </td>
+                  
+                    
                     <td>
-                        @Html.DisplayFor(modelItem => item.Created)
+                        @Html.DisplayFor(modelItem => item.TicketType.Name)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Updated)
+                        @Html.DisplayFor(modelItem => item.TicketStatus.Name)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Archived)
+                        @Html.DisplayFor(modelItem => item.TicketPriority.Name)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Project.Description)
+                        @Html.DisplayFor(modelItem => item.OwnerUser.FullName)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.TicketType.Id)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.TicketStatus.Id)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.TicketPriority.Id)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.OwnerUser.Id)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.DeveloperUser.Id)
+                        @Html.DisplayFor(modelItem => item.DeveloperUser.FullName)
                     </td>
                     <td>
                         <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
