ticekt details amazing dashboard good

--- a/Views/Home/Dashboard.cshtml
+++ b/Views/Home/Dashboard.cshtml
@@ -500,12 +500,12 @@
                         <div class="widget-amount">
 
                             <div class="w-a-info funds-received">
-                                <button class="btn btn-dark" asp-action="AllTickets" asp-controller="Tickets" > <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-up"><polyline points="18 15 12 9 6 15"></polyline></svg>View My Profile</button>
+                                <button class="btn btn-dark" asp-action="AllTickets" asp-controller="Tickets" > View My Profile</button>
                                 
                             </div>
 
                             <div class="w-a-info funds-spent">
-                                <button class="btn btn-dark " asp-action="MyProjects" asp-controller="Projects"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-down"><polyline points="6 9 12 15 18 9"></polyline></svg>Update My Profile</button>
+                                <button class="btn btn-dark " asp-action="MyProjects" asp-controller="Projects"> Update My Profile</button>
                                
                             </div>
                         </div>
